src/app/core/components/navbar/navbar.component.css
/* NAVBAR */

.navbar {
    top: 0;
    z-index: 1000;

    backdrop-filter: blur(20px);
    background: var(--dark-background-color);
}

/* CONTAINER */

.nav-container {
    max-width: 1200px;
    margin: auto;
    padding: 1rem 2rem;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* LOGO */

.logo {
    display: flex;
    align-items: center;
    gap: .6rem;
    text-decoration: none;
}

.logo img {
    height: 70px;
    width: auto;
}

/* Brand Layout */

.brand {
    display: flex;
    flex-direction: column;
    line-height: 1.1;
}

/* Main Brand */

.brand-main {
    font-family: "Playfair Display", serif;
    font-size: 1.3rem;
    font-weight: 600;
    color: var(--blue);
}

/* Subtitle */

.brand-sub {
    font-family: "Inter", sans-serif;
    font-size: 0.7rem;
    letter-spacing: 2px;
    text-transform: uppercase;
    color: var(--gold);
}

/* LINKS */

.nav-links {
    display: flex;
    gap: 2rem;
    list-style: none;
}

/* LINK STYLE */

.nav-links a {
    position: relative;
    text-decoration: none;
    color: var(--gold);
    font-weight: 500;
    padding-bottom: 4px;
    cursor: pointer;
}

.nav-links a::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;

    width: 0%;
    height: 2px;

    background: var(--beige);

    transition: width 0.3s ease;
}

.nav-links a:hover::after {
    width: 100%;
}

.nav-links a.active::after {
    width: 100%;
}

/* MOBILE MENU BUTTON */
.menu-toggle {
    display: none;
    flex-direction: column;
    gap: 4px;

    background: none;
    border: none;
    cursor: pointer;
}

.menu-toggle span {
    width: 25px;
    height: 3px;
    background: var(--gold);
    display: block;
}

/* MOBILE */
@media (max-width: 768px) {

    .menu-toggle {
        display: flex;
    }

    .nav-links {
        position: absolute;
        top: 70px;
        left: 0;

        width: 100%;

        background: var(--beige);
        backdrop-filter: blur(10px);

        flex-direction: column;
        align-items: center;

        padding: 2rem 0;
        gap: 1.5rem;

        display: none;
    }

    .nav-links.active {
        display: flex;
    }
}

